# LookingGlass

client/: CMakeLists.txt
common/: CMakeLists.txt  debug.h
common/src/platform/linux/: CMakeLists.txt
common/src/platform/windows/: CMakeLists.txt
host/: Makefile  New.cpp  TimeReport.cpp  main.cpp
host/Capture/: DXGI.cpp
obs/: CMakeLists.txt  lg.c
